--- a/report/references.bib
+++ b/report/references.bib
@@ -176,7 +176,7 @@
   pages     = {305–314}
 }
 
-@inproceedings{Addlesee_Data_2023,
+@article{Addlesee_Data_2023,
   title   = {Data Collection for Multi-party Task-based Dialogue in Social Robotics},
   author  = {Addlesee, Angus and Sieinska, Weronika and Gunson, Nancie and Hernández García, Daniel and Dondrup, Christian and Lemon, Oliver},
   url     = {https://drive.google.com/file/d/1gUsMOlYHDzreB17CYNFxDOu-dWCtBQ4M/view?usp=sharing&usp=embed_facebook},
@@ -223,9 +223,10 @@
 }
 
 @misc{GPT_4_2023,
-  title    = {GPT-4},
+  title    = {OpenAI GPT-4 Introduction},
   author   = {OpenAI},
   url      = {https://openai.com/research/gpt-4},
+  note     = {Accessed on: 2023-03-30},
   urldate  = {2023-03-30},
   language = {en-US},
   year     = {2023}
@@ -256,3 +257,12 @@
   language  = {en}
 }
 
+@misc{Open_trivia_2023,
+  title        = {Open Trivia DB},
+  url          = {https://opentdb.com/},
+  abstractnote = {Free to use, user-contributed trivia questions!},
+  language     = {en},
+  author       = {Pixeltail Games LLC},
+  urldate      = {04-04-20203},
+  year         = {2023}
+}
