adds confusion matrix for agreement detection

--- a/report/report.tex
+++ b/report/report.tex
@@ -370,9 +370,9 @@ Fuzzy string matching is a computational technique employed to approximate strin
 \subsection{Confusion Matrix}
 This confusion matrix shows the predictions made by the system for 6 evaluations. The true tositive value is when the system accurately identifies agreement, the false positive value is when it identifies agreement that hasn't happened, false negative is when the system misses an agreement and the true negative value is when users do not wish to lock in an answer and the system recognises that.
 \begin{figure}[!ht]
-    \centering
-    \includegraphics{images/1-6.png}
-    \caption{confusion matrix}
+  \centering
+  \includegraphics[width=\columnwidth]{images/agreement_confusion_matrix.png}
+  \caption{Agreement Detection Confusion Matrix}
 \end{figure}
 \subsubsection{Calculations}
 $Recall Rate = TP / P = 34 / 39 = 0.87 = 87\%$
