--- a/report/report.tex
+++ b/report/report.tex
@@ -368,12 +368,14 @@ The enhancements between the two iterations yielded improvements, with 83\% of p
 Fuzzy string matching is a computational technique employed to approximate string matches. In our system, we employed fuzzy string matching to identify potential answers based on the participants' speech. The selection of an optimal threshold was critical to achieve optimal performance. Empirical analysis was conducted to identify the most effective threshold, with the findings suggesting that 0.5 yielded the highest performance. Subsequent evaluations were conducted using various threshold values, with the system utilizing the 0.5 threshold surpassing all other thresholds in performance. Notably, the system also demonstrated proficiency in recognizing complex terms, such as ``haemocytometer'' and ``viltrumite'', which were unfamiliar to the participants.
 
 \subsection{Confusion Matrix}
-This confusion matrix shows the predictions made by the system for 6 evaluations. The true tositive value is when the system accurately identifies agreement, the false positive value is when it identifies agreement that hasn't happened, false negative is when the system misses an agreement and the true negative value is when users do not wish to lock in an answer and the system recognises that.
+This confusion matrix shows the predictions made by the system throughout all evaluations. The true positive value is when the system accurately identifies agreement, the false positive value is when it identifies agreement that hasn't happened, false negative is when the system misses an agreement and the true negative value is when users do not wish to lock in an answer and the system recognises that.
+
 \begin{figure}[!ht]
   \centering
   \includegraphics[width=\columnwidth]{images/agreement_confusion_matrix.png}
   \caption{Agreement Detection Confusion Matrix}
 \end{figure}
+
 \subsubsection{Calculations}
 $Recall Rate = TP / P = 34 / 39 = 0.87 = 87\%$
 $Specificity Rate = TN / N = 6 / 25 = 0.24 = 24\%$
