improves literature review

--- a/report/references.bib
+++ b/report/references.bib
@@ -266,3 +266,53 @@
   urldate      = {04-04-20203},
   year         = {2023}
 }
+
+@inproceedings{Mahajan_Santhanam_Shaikh_2022,
+  address   = {Waterville, Maine, USA and virtual meeting},
+  title     = {Towards Evaluation of Multi-party Dialogue Systems},
+  url       = {https://aclanthology.org/2022.inlg-main.23},
+  booktitle = {Proceedings of the 15th International Conference on Natural Language Generation},
+  publisher = {Association for Computational Linguistics},
+  author    = {Mahajan, Khyati and Santhanam, Sashank and Shaikh, Samira},
+  year      = {2022},
+  month     = {Jul},
+  pages     = {278-287}
+}
+
+ @inproceedings{Higashinaka_Araki_Tsukahara_Mizukami_2021,
+  address      = {Singapore and Online},
+  title        = {Integrated taxonomy of errors in chat-oriented dialogue systems},
+  url          = {https://aclanthology.org/2021.sigdial-1.10},
+  abstractnote = {This paper proposes a taxonomy of errors in chat-oriented dialogue systems. Previously, two taxonomies were proposed; one is theory-driven and the other data-driven. The former suffers from the fact that dialogue theories for human conversation are often not appropriate for categorizing errors made by chat-oriented dialogue systems. The latter has limitations in that it can only cope with errors of systems for which we have data. This paper integrates these two taxonomies to create a comprehensive taxonomy of errors in chat-oriented dialogue systems. We found that, with our integrated taxonomy, errors can be reliably annotated with a higher Fleiss' kappa compared with the previously proposed taxonomies.},
+  booktitle    = {Proceedings of the 22nd Annual Meeting of the Special Interest Group on Discourse and Dialogue},
+  publisher    = {Association for Computational Linguistics},
+  author       = {Higashinaka, Ryuichiro and Araki, Masahiro and Tsukahara, Hiroshi and Mizukami, Masahiro},
+  year         = {2021},
+  month        = {Jul},
+  pages        = {89-98}
+}
+
+@inproceedings{Skantze_Johansson_Beskow_2015,
+  address   = {Seattle Washington USA},
+  title     = {Exploring Turn-taking Cues in Multi-party Human-robot Discussions about Objects},
+  isbn      = {978-1-4503-3912-4},
+  url       = {https://dl.acm.org/doi/10.1145/2818346.2820749},
+  doi       = {10.1145/2818346.2820749},
+  booktitle = {Proceedings of the 2015 ACM on International Conference on Multimodal Interaction},
+  publisher = {ACM},
+  author    = {Skantze, Gabriel and Johansson, Martin and Beskow, Jonas},
+  year      = {2015},
+  month     = {Nov},
+  pages     = {67-74},
+  language  = {en}
+}
+
+@misc{Furhat_2023,
+  title        = {Furhat - The world's most advanced social robot},
+  url          = {https://furhatrobotics.com/},
+  abstractnote = {Furhat is a social robot with human-like expressions and advanced conversational artificial intelligence (AI) capabilities.},
+  language     = {en-US},
+  author       = {Furhat Robotics},
+  note         = {Accessed on: 2023-04-05},
+  year         = {2023}
+}
