--- a/report/report.tex
+++ b/report/report.tex
@@ -223,6 +223,7 @@ The intents identified by the NLU are then passed onto the Dialogue Manager (DM)
 The dialogue manager is responsible for selecting an adequate response at any given moment. It is also tasked with asking questions, which it obtains from the OpenTrivia Database, a user-contributed trivia question database under the Creative Commons License \cite{Open_trivia_2023}. The dialogue manager is composed of two components: a state machine and a Pytorch model. This approach was chosen because, despite involving a conversation which requires intelligent behaviour from the dialogue manager, the game itself is defined by a set of rigid rules:
 
 \begin{itemize}
+  \setlength\itemsep{0.05em}
   \item The users are always asked ten questions.
   \item The system must drive the conversation by passing from one question to the next.
   \item The game must end at a specified time.
@@ -325,11 +326,12 @@ To further improve on NLG within this system, some content moderation could be p
 
 \subsection{Experiment Layout}
 \label{subsec:experiment_layout}
-We evaluated both subjective and objective measures of the system's performance. The subjective measures included the user's enjoyment and perception of the system's natural behaviour, while the objective measures focussed on the agreement rate. The agreement rate indicates the frequency of the system correctly detecting users' intent to submit a final answer compared to not detecting user agreement or wrongly detecting agreement when there was none.
+We evaluated both subjective and objective measures of the system's performance. The subjective measures included the user's enjoyment and perception of the system's natural behaviour, while the objective measures focussed on the agreement rate. The agreement rate indicates the frequency of the system correctly detecting users' intent to submit a final answer.
 
-The experiment followed a between-subjects design. The evaluation took place in-person in two iterations, both iterations with three pairs of participants. Each participant sat in front of a laptop, where they could see the webpage with the question and answer options on the screen (see \Cref{app:system_webpage}). Each pair of participants played one round of the quiz (10 questions). Afterwards, they were asked to complete a questionnaire about their experience. They rated the system in the following aspects using a five-point Likert scale:
+The evaluation took place in two iterations in a between-subjects design, both iterations with three pairs of participants. Each participant sat in front of a laptop, where they could see the webpage with the question and answer options on the screen (see \Cref{app:system_webpage}). Each pair of participants played one round of the quiz (10 questions). Afterwards, they were asked to complete a questionnaire about their experience. They rated the system in the following aspects using a five-point Likert scale:
 
 \begin{itemize}
+  \setlength\itemsep{0.05em}
   \item Ease of understanding the rules of the game
   \item Ease of navigating the UI
   \item Enjoyment
@@ -338,7 +340,7 @@ The experiment followed a between-subjects design. The evaluation took place in-
   \item Overall satisfaction
 \end{itemize}
 
-In the first iteration, we followed a strategy of selecting ten questions at random from a set of 34 and included all possible answers as entities to make sure the system was able to recognise them. For example, the answer option ``Bushwhackers'' had the following variations:
+\noindent In the first iteration, we followed a strategy of selecting ten questions at random from a set of 34 and included all possible answers as entities to make sure the system was able to recognise them. For example, the answer option ``Bushwhackers'' had the following variations:
 
 \begin{verbatim}
   "The Bushwhackers",
@@ -350,25 +352,26 @@ In the first iteration, we followed a strategy of selecting ten questions at ran
   "whackers"
 \end{verbatim}
 
-However, this approach restricted generalization beyond the specific set of questions and answers. We also came across additional issues, such as microphones picking up both users' voices. Therefore, we improved the system for the second iteration with the following features:
+\noindent However, this approach restricted generalization beyond the specific set of questions and answers. We also came across additional issues, such as the microphones picking up both users' voices and questions being repeated. Therefore, we improved the system for the second iteration with the following features:
 
 \begin{enumerate}
+  \setlength\itemsep{0.05em}
   \item The set of questions was expanded to 3490.
   \item Fuzzy String Matching was implemented.
   \item Microphones were moved further apart.
 \end{enumerate}
 
-By incorporating a fuzzy matching algorithm (discussed in \Cref{subsec:fuzzy_string}), entity extraction was improved across all questions in our database. This technique enabled us to implement a more comprehensive and robust system that could better accommodate a wide range of questions and answers. As discussed in \cref*{subsec:asr}, too little of a distance between microphones meant that both users' voices would get picked up by one. This led to the system detecting agreement as both users' seemingly agreed on the same answer, while it was in fact a duplicated utterance. In addition to adding questions, we also implemented logic to make sure the same question would not show up twice in one round of the game, which was an issue in the first iteration.
+By incorporating a fuzzy matching algorithm (discussed in \Cref{subsec:fuzzy_string}), entity extraction was improved across all questions in our database. This technique enabled us to implement a more robust system that could accommodate to a wide range of questions and answers. As discussed in \Cref{subsec:asr}, too little of a distance between microphones meant that both users' voices would get picked up by one. This led to the system detecting agreement as both users' seemingly agreed on the same answer, while it was in fact a duplicated utterance. In addition to adding questions, we also implemented logic to make sure the same question would not show up twice in one round of the game, which was an issue in the first iteration.
 
 \subsection{Results}
 \label{subsec:results}
 
-\subsubsection{Questionnaire Results}
+\subsubsection{User Satisfaction}
 The enhancements between the two iterations yielded improvements, with 83\% of participants expressing satisfaction with the overall system in the first evaluation, and 100\% in the subsequent evaluation. Regarding the system's behaviour, 50\% of participants in both evaluations indicated that the system appeared natural. Furthermore, 83\% of participants reported enjoying the experience in both evaluations. This represents a notable advancement in the performance of system 2, as participants reported encountering more challenging questions during the second evaluation, resulting in a lower rate of correct answers. Prior to this improvement, the difficulty of the questions and the lower rate of correct answers had resulted in reduced enjoyment for the participants.
 
-\subsubsection{Fuzzy string matching}
+\subsubsection{Fuzzy String Matching}
 \label{subsec:fuzzy_string}
-Fuzzy string matching is a computational technique employed to approximate string matches. In our system, we employed fuzzy string matching to identify potential answers based on the participants' speech. The selection of an optimal threshold was critical to achieve optimal performance. Empirical analysis was conducted to identify the most effective threshold, with the findings suggesting that 0.5 yielded the highest performance. Subsequent evaluations were conducted using various threshold values, with the system utilizing the 0.5 threshold surpassing all other thresholds in performance. Notably, the system also demonstrated proficiency in recognizing complex terms, such as ``haemocytometer'' and ``viltrumite'', which were unfamiliar to the participants.
+Fuzzy string matching is a computational technique to approximate string matches. It does so by tokenizing both strings and comparing the similarity of common tokens of both strings. In our system, we employed fuzzy string matching to identify potential answers based on the participants' speech. The selection of an optimal similarity threshold was critical for performance. Empirical analysis was conducted to identify the most effective threshold, with the findings suggesting that 0.5 yielded the highest performance. Subsequent evaluations were conducted using various threshold values, with the system utilizing the 0.5 threshold surpassing all other thresholds in performance. Notably, the system also demonstrated proficiency in recognizing complex terms, such as ``haemocytometer'' and ``viltrumite'', which were unfamiliar to the participants.
 
 \subsection{Confusion Matrix}
 The original matrix created was similar to a traditional confusion matrix in being 2 x 2. That matrix did not accurately portray the capabilities of the system as the issues caused by both microphones hearing one user were not separated from issues within the system. Therefore a new confusion matrix was created with an extra column to separate agreement detected due to the microphone issue.
@@ -406,11 +409,6 @@ The false negatives tended to occur when the answer names are very obscure and t
 In this report, we have presented a conversational system to play a game of ``Who wants to be millionaire?'' in a multi-party setting. The system is able to detect users agreeing on a final answer, or will continue asking for an answer to encourage users to reach a conclusion. The question and answer options are displayed on a website, which is intended to mimic the ARI robot's screen.
 To evaluate the system, we conducted an experiment assessing users' perception of the system, as well as its performance.
 % Include more stuff from Katie
-
-\subsection{Ethical Reflection}
-\label{subsec:ethics}
-Our set of questions is predefined, therefore, the system does not use any wrong information.
-
 
 \section{Future Work}
 \label{sec:future_work}
